Alterações no service e personalização de excessões