@@ -1,11 +1,13 @@
 package com.anderson.planner.link;
 
+import com.anderson.planner.link.exceptions.LinkNotFoundException;
 import com.anderson.planner.trip.Trip;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class LinkService {
@@ -21,6 +23,13 @@ public class LinkService {
     }
 
     public List<LinkData> getAllLinksFromTrip(UUID tripId){
-        return this.repository.findByTripId(tripId).stream().map(link -> new LinkData(link.getId(), link.getTitle(), link.getUrl())).toList();
+        List<Link> links = this.repository.findByTripId(tripId);
+        if(links.isEmpty()){
+            throw new LinkNotFoundException("This trip has no links");
+        }
+        return links.stream().map(link -> new LinkData(link.getId(),
+                link.getTitle(),
+                link.getUrl()))
+                .collect(Collectors.toList());
     }
 }
